--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,3 +1,12 @@
+.feedbackList {
+  display: flex;
+  padding: 0;
+}
+
+.feedbackItem {
+  list-style: none;
+}
+
 .button {
   display: inline-flex;
   margin: 0 4px;
@@ -8,5 +17,4 @@
   font-size: 14px;
   font-family: inherit;
   background-color: #2196f3;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
