--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,8 +1,8 @@
 .section {
-  width: 50%;
+  display: grid;
   margin: auto;
-  text-align: center;
+  max-width: 300px;
+  text-align: start;
   font-weight: 500;
   font-size: 14px;
-  margin-bottom: 15px;
 }
